--- a/index.html
+++ b/index.html
@@ -3,31 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABC College</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>College Name</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header>
-    <img src="images/logo.png" alt="College Logo">
-    <h1>ABC College</h1>
-</header>
-
-<nav>
-    <a href="index.html">Home</a>
-    <a href="academics.html">Academics</a>
-    <a href="admission.html">Admission</a>
-    <a href="gallery.html">Gallery</a>
-</nav>
-
-<article>
-    <h2>Welcome to ABC College</h2>
-    <p>ABC College is a prestigious institution .</p>
-<article>
-
-<footer>
-    &copy; 2024 ABC College. All rights reserved.
-</footer>
-
+    <header>
+        <img src="images/logo.png" alt="College Logo">
+        <h1>College Name</h1>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="academics.html">Academics</a>
+        <a href="admission.html">Admission</a>
+        <a href="gallery.html">Gallery</a>
+    </nav>
+    <div class="container">
+        <h2>Welcome to College Name</h2>
+        <p>Welcome to our esteemed institution, where we offer a holistic education experience. Our college is committed to providing quality education and fostering the intellectual and personal growth of our students.</p>
+        <p>Our college offers a range of courses across Arts, Science, and Commerce streams. Explore our website to learn more about our academic offerings, admission process, and vibrant campus life.</p>
+    </div>
 </body>
 </html>
